Add a third bg color

--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,7 @@
 	--color-impervia-blue: #51a2be;
 	--color-impervia-dark-blue: #2c576a;
 	--color-impervia-darker-blue: #16323e;
+	--color-impervia-third-blue: #3c4f5c;
 	--color-impervia-yellow: #fec559;
 
 	--font-poppins: 'Poppins', sans-serif;
